--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This instant messaging project can be found at ifriendu.org
+This instant messaging project can be found runnung live at ifriendu.org
